--- a/style.css
+++ b/style.css
@@ -131,17 +131,41 @@ div.third{
     size: 20px;
 }
 
-.form{
-    background-color: rgb(255, 255, 255);
-    margin: 50px;
-    padding: 10px;
+.contact-form{
+    background-color: white;
+    width: 450px;
+    margin: 0px 300px;
+    padding: 15px;
 }
 
-.label{
+.form-label{
+    font-family: sans-serif;
+    font-size: 15px;
     color: red;
+    
 }
 
-.name{
-    width: 1000px;
+.user-details{
+    width: 430px;
+    /* padding: 5px; */
+    margin-bottom: 10px;
+    vertical-align: top;
+    
 }
 
+#fmessage{
+    /* height: 100; */
+    /* margin-bottom: 50PX; */
+    padding-bottom: 100px;
+}
+    
+
+.sub-button{
+    text-align: center;
+    color: white;
+    background-color: rgb(8, 114, 123);
+    border: none;
+    width: 430PX;
+    height: 40PX;
+    font-size: 20PX;
+}
