--- a/style.css
+++ b/style.css
@@ -169,3 +169,65 @@ div.third{
     height: 40PX;
     font-size: 20PX;
 }
+
+.banner-img{
+    width: 250px;
+    height: 250px;
+    /* float: left;  */
+    /* float: right; */
+}
+
+.apply-position{
+    /* position:fixed;
+    position: absolute; */
+    /* top:150px; */
+    bottom: 200px;
+    left: 20px;
+    right: 30px;
+}
+
+.grid-container{
+    display: grid;
+    display: inline-grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 30px;
+    grid-template-columns: 60px 20px 20px 30px;
+    grid-template-rows: 80px 100px;
+    background-color: rgb(165, 42, 140);
+}
+
+.grid-item{
+    background-color: crimson;
+    border: 5px solid rgb(144, 0, 255);
+    text-align: center;
+}
+
+.container{
+    display: grid;
+    /* display: inline-grid; */
+    grid-template-columns: auto auto;
+    background-color: blueviolet;
+    grid-column-gap: 30px;
+    padding: 20px;
+}
+
+.para{
+    background-color: chartreuse;
+    border: 15px solid rgb(8, 114, 123);
+    border-radius: 20px;
+    border-style: double;
+    font-size: 30px;
+    padding: 6px;
+}
+
+.data{
+    display: grid;
+    display: inline-grid;
+    grid-template-columns: 20px 20px;
+    grid-template-rows: auto auto auto auto auto auto;
+    grid-gap: 30px 90px;
+    background-color: white;
+    margin: 20px;
+    padding: 30px;
+    padding-bottom: 0px;
+}
