--- a/style.css
+++ b/style.css
@@ -172,24 +172,24 @@ div.third {
     font-size: 20PX;
 }
 
-/* .image{
+/* .im {
     width: 250px;
     height: 350px;
     float: right;
 } */
-
+/* 
 .apply-pos {
     position: absolute;
-    /* bottom: 50%;
+    bottom: 50%;
     top: 100px;
-    right: 20px; */
+    right: 50px;
     bottom: 0%;
-}
+} */
 
 .grid {
     display: grid;
     /* display: inline-grid; */
-    grid-template-columns: 100% 70px 70px 70px 70px;
+    grid-template-columns: 70px 70px 70px 70px 70px;
     grid-template-rows: auto;
     grid-column-gap: auto;
     background-color: rgba(255, 255, 255, 0.819);
@@ -197,8 +197,8 @@ div.third {
     text-align: center;
     position: fixed;
     top: 50px;
+    width: 100%;
     /* opacity: 0.4; */
-
 }
 
 
@@ -212,6 +212,7 @@ div.third {
     position: relative;
     /* grid-column-gap: 50px; */
     left: 10px;
+
 }
 
 
@@ -221,4 +222,34 @@ div.third {
     /* border: 10px solid rgb(0, 72, 255); */
     padding: 8px;
     color: black;
+}
+
+.flex-container {
+    height: 200px;
+    background-color: darkblue;
+    display: flex;
+    /* justify-content: center; */
+    /* justify-content: flex-end; */
+    /* justify-content: flex-start; */
+    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    /* align-items: flex-start; */
+    /* align-items: flex-end; */
+    /* align-items: baseline; */
+    /* flex-direction: column; */
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
+    /* flex-direction: column-reverse; */
+    /* flex-direction: row-reverse; */
+}
+
+
+.flex-item {
+    background-color: blueviolet;
+    color: yellow;
+    border: 3px solid rgb(8, 114, 123);
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
 }
