--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ div.third {
     height: 200px;
     background-color: darkblue;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     /* justify-content: flex-end; */
     /* justify-content: flex-start; */
     /* justify-content: space-around; */
@@ -252,4 +252,22 @@ div.third {
     padding: 20px;
     margin: 20px;
     text-align: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.psu-test:hover {
+    color: darkcyan;
+    background-color: darkgreen;
+    width: 300px;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .media-test::first-letter {
+        color: darkmagenta;
+        font-family: 'Times New Roman', Times, serif;
+        text-transform: capitalize;
+        font-size: 50px;
+    }
 }
